# DropOut

./: .gitignore  .pre-commit-config.yaml  CNAME  Cargo.toml  README.CN.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.cargo/: config.toml
.changes/: alpha.md  chore-vsc-extensions.md  chore.md  config.toml  dropout-macros.md  fix-version.md  migrate-apis.md  partial-react.md  process-monitor.md  release-aur.md  tauri-app-name.md  ts-bindings.md
.claude/: settings.local.json
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  cn-bug-report.yml  cn-feature-request.yml  cn-question.yml  config.yml  feature_request.yml  question.yml
.github/agents/: commit.agent.md
crates/macros/: CHANGELOG.md  Cargo.toml
crates/macros/src/: attr.rs  lib.rs
scripts/: bump-tauri.ts  release-aur.ts
src/: main.rs
src-tauri/: CHANGELOG.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/core/: account_storage.rs  assistant.rs  auth.rs  config.rs  downloader.rs  fabric.rs  forge.rs  game_version.rs  instance.rs  java.rs  manifest.rs  maven.rs  mod.rs  modpack.rs  rules.rs  version_merge.rs
src-tauri/src/core/java/: detection.rs  error.rs  mod.rs  persistence.rs  priority.rs  provider.rs  validation.rs
src-tauri/src/core/java/providers/: adoptium.rs  mod.rs
src-tauri/src/launcher/: config.rs  launcher.rs  mod.rs
src-tauri/src/utils/: api.rs  mod.rs  path.rs
src-tauri/tests/: instance_isolation_tests.rs
src/ui/: mod.rs
ui/: index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  style.css  vite.config.ts
(+37 files in other folders)
